--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Interactive map of the Star Wars galaxy."
+      content="Interactive map of the Galaxy, complete with planets, space lanes, and faction borders."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
